tests/ui/once_max_size_rejected.stderr
error: `max_size` is not supported on `#[once]`; `#[once]` stores a single value, so there is no entry count to bound
 --> tests/ui/once_max_size_rejected.rs:4:4
  |
4 | fn f() -> i32 {
  |    ^
